# python_project_template

./: README.MD
src/: LICENSE  long_description.md  readme.md  setup.cfg
src/my_package/: README.MD  __main__.py
src/my_package/my_package/: a.py  main.py  myclass.py
src/my_package/my_package/main/: main.py
src/my_package/my_package/submodule_b/: b.py
src/my_package/my_package/submodule_c/: c.py
src/my_package/test/: test.py
src/test/: test_mypackage.py
