[metadata]
# package name used for uninstalling
name = my_package

version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: long_description.MD
long_description_content_type = text/markdown
url = https://github.com/YOUR_REPOSITORY_OR_WEBSITE
project_urls =
    Bug Tracker = https://github.com/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
# automatically gather all modules in `my_package`
package_dir =
    = my_package
packages = find:
python_requires = >=3.6

# set root directory
[options.packages.find]
where = my_package

[options.entry_points]
console_scripts =
    my_package = my_package.main:main

# ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
#     VERY IMPORTANT
#
#          ↓
#
#  This is to run your python "program" like a regular program
#   (without needing `python3` or `python -m`).
#
#
# Explanation:
#      `my_package = my_package.main.main:generic_main`
#    means
#      The command `myprogram` on the CLI will run
#      `./my_package/main/main.py : generic_main()`
#
#    So `my_package` here is like an alias.
#
# To prevent troubles uninstalling: the "alias" name, it should
#  be the same as the package name (top). That way the user can
#  very easily uninstall via `pip uninstall PACKAGE_NAME`
#